--- a/about.html
+++ b/about.html
@@ -14,17 +14,17 @@
         <a class="cabecalho__menu__link" href="about.html"> Sobre mim </a>
       </nav>
     </header>
-    <main class="sobreMim">
-      <section class="sobreMim__conteudo">
-        <h1 class="sobreMim__titulo">Sobre mim</h1>
-        <p class="sobreMim__texto">
+    <main class="apresentacao">
+      <section class="apresentacao__conteudo">
+        <h1 class="apresentacao__titulo">Sobre mim</h1>
+        <p class="apresentacao__texto">
           At vero eos et accusamus et iusto odio dignissimos ducimus qui
           blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
           et quas molestias excepturi sint occaecati cupiditate non provident,
           similique sunt in culpa qui officia deserunt mollitia animi, id est
           laborum et dolorum fuga.
         </p>
-        <p class="sobreMim__texto">
+        <p class="apresentacao__texto">
           Et harum quidem rerum facilis est et expedita distinctio. Nam libero
           tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo
           minus id quod maxime placeat facere possimus, omnis voluptas assumenda
